src/scss/_projects.scss
header {
  transition: all 0.3s ease-in;
  // transition: all 0.3s ease-in, background 0.5s ease-in; // ORIGINAL
  transition-delay: 0.25s;

  .svg-circle {
    // transform: rotate(94deg);
  }

  .projects {
    pointer-events: bounding-box;
    position: fixed;
    display: block;
    width: 72px;
    height: 72px;
    right: calc(5.75% - 24px);
    top: 13px;
    z-index: 100;
    transform: rotate(0);
    transition: transform 0.5s ease-in-out 0.125s;

    * {
      pointer-events: none;
    }

    div {
      position: absolute;
      left: 24px;
      width: 16px;
      height: 2px;
      background: $white;
      background: var(--button-color, $white); // not yet implemented with JS

      transition:
        width 0.125s ease-in-out,
        top 0.25s ease-in-out 0.5s,
        transform 0.25s ease-out 0.25s,
        opacity 0.001s linear 0.5s,
        background-color 0.25s linear;
    }
    div:nth-child(1) {
      width: 24px;
      top: 29px;
    }
    div:nth-child(2) {
      width: 24px;
      top: 35px;
    }
    div:nth-child(3) {
      top: 41px;
    }

    &.opened {
      transform: rotate(90deg);
      transition: transform 0.5s ease-in-out 0.375s;

      div {
        width: 24px;
        transition:
          width 0.125s ease-in-out 0.875s,
          top 0.25s ease-in-out 0.25s,
          transform 0.25s ease-out 0.5s,
          opacity 0.001s linear 0.5s,
          background-color 0.25s linear;
      }
      div:nth-child(1) {
        top: 35px;
        transform: rotate(45deg);
      }
      div:nth-child(2) {
        opacity: 0;
      }
      div:nth-child(3) {
        top: 35px;
        transform: rotate(-45deg);
      }

      &:hover {
        div:nth-child(3) {
          width: 24px;
        }
      }
    }

    // // animating class is currently disabled in app.js
    // &.animating {
    //   div {
    //     transition:
    //       width 0.125s ease-in-out,
    //       top 0.25s ease-in-out 0.5s,
    //       transform 0.25s ease-out 0.25s,
    //       opacity 0.001s linear 0.5s;
    //   }
    // }

    &.closing {
      transition: transform 0.5s ease-in-out 0.125s;
      // transition: transform 0.5s ease-in-out 0.375s;

      div {
        width: 24px;
        transition:
          width 0.125s ease-in-out 0.1s,
          top 0.25s ease-in-out 0.5s,
          transform 0.25s ease-out 0.25s,
          opacity 0.001s linear 0.5s,
          background-color 0.25s linear;
      }

      // &:hover {
      //   div {
      //     &:nth-child(3) {
      //       width: 24px;
      //     }
      //   }
      // }
    }

    &.arrow-transition-in {
      position: fixed;
      transform: rotate(90deg);
      transition: transform 0.25s ease-in-out 0s;

      div {
        transition:
          width 0.125s ease-in-out 0s,
          top 0.2s ease-in-out 0.05s,
          transform 0.25s ease-out 0s,
          background-color 0.25s linear;
      }
      div:nth-child(1) {
        top: 32px;
        transform: rotate(-45deg);
        width: 11px;
        left: 22px;
      }
      div:nth-child(2) {
        width: 28px;
      }
      div:nth-child(3) {
        top: 38px;
        transform: rotate(45deg);
        width: 11px;
        left: 22px;
      }

      &:hover {
        div:nth-child(3) {
          width: 11px;
        }
      }
    }

    &.arrow-transition-out {
      transform: rotate(0);
      transition: transform 0.25s ease-in-out 0s;

      div {
        position: absolute;
        left: 24px;
        width: 16px;
        height: 2px;

        transition:
          width 0.125s ease-in-out 0.1s,
          top 0.125s ease-in-out 0s,
          transform 0.125s ease-out 0s;
      }
      div:nth-child(1) {
        width: 24px;
        top: 29px;
      }
      div:nth-child(2) {
        width: 24px;
        top: 35px;
      }
      div:nth-child(3) {
        top: 41px;
      }
    }

    &.light {
      div {
        background: $white;
      }
    }

    &:hover {
      div {
        width: 24px;
      }
    }
  }
}

.black .feature1,
.black .feature2,
.black .feature3 {
  background: $black;
}

#main {
  &.blocked {
    display: none;
    position: relative !important;
  }
  .inner_img {
    background: #f6f6f6;
    padding: 15vw 0 5.5vw 0;
    position: relative;
    overflow: hidden;

    img {
      display: block;
      width: 100%;
      margin-bottom: 8.5vw;
    }
    .wrap {
      margin: 0 auto;
      width: 62%;
      position: relative;
      // -webkit-transform-origin: 50% 50%;
              transform-origin: 50% 50%;
    }
  }
  #next_proj {
    height: 100vh;
    background: #000000;

    .stag {
      opacity: 0;
    }
    > div {
      display: block;
      width: 80%;
      margin-left: 10%;
      // margin: 0 auto;
      text-align: center;
      position: relative;
      top: 50%;
      // -webkit-transform: translateY(-50%);
              transform: translateY(-50%);

      div {
        position: absolute;
        color: $white;
        @include stroke(0px, $white);
        font: 400 normal 14px/14px $graphik;
        // font: 400 normal 16px/16px 'Adelon';
        // font: 400 normal 15px/15px $italiana, serif;
        width: 100%;
        text-align: center;
        padding-top: 2vw;

        > span {
          // font: 400 normal 13px/13px $graphik;
          display: inline-block;
          position: absolute;
          white-space: nowrap;
          right: calc(50% + 34px);
        }
      }
      a {
        display: inline-block;
        // font: 500 normal 100px/100px $italiana, serif;
        // letter-spacing: 1px;
        text-transform: uppercase;
        color: $black;
        @include stroke(1px, $white);

        &.changing {
          span {
            color: $black;
            @include stroke(1px, $black);
            transition:
              color 0.25s ease-in-out 0.6s,
              -webkit-text-stroke 0.25s ease-in-out 0.6s,
              -ms-text-stroke 0.25s ease-in-out 0.6s;
          }
        }

        span {
          font: 500 normal 100px/100px $italiana, serif;
          color: $white;
          @include stroke(1px, $white);
          pointer-events: none;

          &.white {
            color: $white;
            @include stroke(0px, $white);
          }
        }
      }
    }
    // .bottom_link {}
    // #to_next_project {
    //   display: inline-block;
    // }
  }
  .datas {
    // font: 900 normal 12px/28px $italiana;
    font: 400 normal 13px/28px $graphik;
    // letter-spacing: 2px;
    // font: 400 normal 13px/28px $graphik;
    padding: 10vh 0 5vh 65vw;

    svg {
      margin-left: 8px;
    }
    span {
      display: block;
      color: $black;

      &:last-child {
        margin-top: 8px;
        // font: 500 normal 13px/28px $graphik;
        // margin-top: 28px;
      }
    }
    a {
      font: 500 normal 13px/28px $graphik;
      display: block;
      color: $black;
      padding: 8px 0 15px 8px;
      // padding-bottom: 15px;
      // padding-left: 8px;
      margin-left: -8px;

      .svg_menu {
        bottom: 10px;
        left: 0px;
      }

      &:hover .svg_line {
        animation: dash4 0.5s linear forwards;
      }
    }
  }
}

.rdt {
  #main {
    .inner_img {
      .wrap {
        img {
          &:nth-child(2),
          &:nth-child(4),
          &:nth-child(5),
          &:nth-child(6),
          &:nth-child(8) {
            margin-bottom: 0;
          }
          &:nth-child(11) {
            margin-bottom: -2px;
            // margin-bottom: -3px;
          }
        }
      }
    }
  }
}

@media (min-width: 1440px) {
  header {
    .projects {
      right: calc(3.75% - 24px);
    }
  }
}

@media (max-width: 1024px) {
  #main {
    .datas {
      padding: 5vh 0 5vh 60vw;
    }
    #next_proj {
      > div {
        a {
          span {
            font: 500 normal 80px/80px $italiana, serif;
          }
        }
      }
    }
  }
}

@media (max-width: 767px) {
  #main {
    #next_proj {
      > div {
        // margin-left: 5%;
        margin: 0 auto;
        width: 90%;

        a {
          // font: 500 normal 19vw/24vw 'Adelon';
          font: 500 normal 11vw/12vw $italiana;

          span {
            font: 500 normal 80px/90px $italiana, serif;
          }
        }
      }
      div {
        padding-top: 7vw;
      }
    }
    .datas {
      padding: 6vh 0 5vw 18vw;
    }
  }
  .inner_img {
    padding: 22vw 0 12vw 0;

    img {
      margin-bottom: 10vw;
    }
    .wrap {
      width: calc(100% - 72px);
    }
  }

  // .datas {
  //   padding: 11vw 0 15vw 37vw;
  // }
}

@media (max-width: 414px) {
  #main {
    #next_proj {
      > div {
        width: 90%;

        a {
          // font: 500 normal 9vw/13vw $italiana;

          span {
            font: 500 normal 55px/65px $italiana, serif;
          }
        }
      }
    }
  }
}

@media (max-width: 320px) {
  #main #next_proj > div a span {
    font: 500 normal 40px/50px $italiana, serif;
  }
}

